--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(lab1template)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(assignment2template main.cpp)
+add_executable(assignment2template main.cpp
+        Algorithm.cpp
+        Algorithm.hpp)
