Implement get_distance_between_cities function in Tour.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(assignment2template main.cpp
         Tour.cpp
-        Tour.hpp)
+        Tour.hpp
+        Algorithm.cpp)
