--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,14 @@ project(lab1template)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(assignment2template main.cpp
+add_executable(
+        assignment2template
+        main.cpp
+        City.cpp
+        City.hpp
         Tour.cpp
         Tour.hpp
         Algorithm.cpp
+        Algorithm.hpp
+        SingletonFacade.hpp
         SingletonFacade.cpp)
